--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,57 @@
-<h1>Pokédex</h1>
-<img [src]="imageSrc()" [alt]="name()">
-<h2>{{ name() }}</h2>
-<p>Taille : {{ size() }}</p>
-<p>Points de vie : {{ life() }}</p>
- 
-<button (click)="decrementLife()" [disabled]="life() <= 0">-</button>
-<button (click)="incrementLife()" [disabled]="life() >= 30">+</button>
-
-
-<!--@if(life() < 30){
-    <button (click)="incrementLife()">+</button>
-} @if(life() == 30){
-    <p>Le pokemon est full-life</p>
-}@if (life() == 0){
-    <p>Le pokemon est KO.</p>
-}
-
-@if (life() > 0){
-    <button (click)="decrementLife()">-</button>
-}
-<hr>
-<h1>Valeur actuelle du compteur : {{ counter() }}</h1>
-<h1>Double de la valeur actuelle : {{ doubleCounter() }}</h1>
-<h1>Triple de la valeur actuelle : {{ tripleCounter() }}</h1>
-<button (click)="increment()">Incrémenter</button>
-<button (click)="reset()">Reset</button> -->
+<nav class="navbar mb-5">
+    <div class="container text-white justify-content-center">
+        <h1>Pokédex</h1>
+    </div>
+</nav>
+<div class="container mb-5">
+    <div class="row">
+        <div class="col-4 offset-4">
+            <div class="card">
+                <form class="card-body">
+                    <div class="form-group">
+                        <label for="search" class="form-label">
+                            Rechercher un Pokémon
+                        </label>
+                        <input type="text" id="search" name="searchTerm" 
+                        class="form-control" 
+                        placeholder="Rechercher un pokémon" 
+                        #searchField 
+                        [value]="searchTerm()" 
+                        (input)="searchTerm.set(searchField.value)">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        @for (pokemon of pokemonListFiltered(); track pokemon.name){
+            <div class="col-md-4">
+                <div class="card mb-3" appPokemonBorder [pokemonType]="pokemon.types[0]">
+                    <div class="row g-0">
+                        <div class="col-md-4 d-flex align-items-center justify-content-center bg-light">
+                            <img class="img-fluid rounded-start" [src]="pokemon.picture" [alt]="pokemon.name">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ pokemon.name }}</h5>
+                                <h6 class="card-subtitle mb-2 text-body-secondary">Taille : {{ size(pokemon) }}</h6>
+                                <p class="card-text">{{ pokemon.created | date:'dd/MM/yyyy'}}</p>
+                                <p class="card-text">Points de vie : {{ pokemon.life }}</p>
+                                <div class="btn-group btn-group-sm" role="group">
+                                    <button (click)="decrementLife(pokemon)" [disabled]="pokemon.life <= 0">-</button>
+                                    <button (click)="incrementLife(pokemon)" [disabled]="pokemon.life >= 30">+</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        } @empty {
+            <div class="col">
+                <div class="alert alert-warning">Aucun Pokémon à afficher</div>
+            </div>
+        }
+    </div>
+</div>
