--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
-.navbar{
+nav{
     background-color: rgba(227, 53, 13, 1);
-}
 
-div .col-md-4 .card{
-    transition: 0.5s;
+    h1{
+        cursor: pointer;
+    }
 }
