--- a/src/app/pokemon/pokemon-edit/pokemon-edit.component.html
+++ b/src/app/pokemon/pokemon-edit/pokemon-edit.component.html
@@ -13,18 +13,40 @@
                   <tr>
                     <th scope="row">Nom</th>
                     <td>
-                      <input type="text" class="form-control" formControlName="name" placeholder="Nom du Pokémon"/>
+                      <input type="text" class="form-control" formControlName="name" placeholder="Nom du Pokémon" [class.is-invalid]="pokemonName.invalid"/>
+                      @if(pokemonName.hasError('required')) {
+                        <div class="invalid-feedback">
+                          Veuillez renseigner ce champ.
+                        </div>
+                      }
+                      @if(pokemonName.hasError('minlength')) {
+                        <div class="invalid-feedback">
+                          Veuillez saisir un nom plus long.
+                          (Minimum: {{ pokemonName.getError("minlength").requiredLength }} caractères)
+                        </div>
+                      }
+                      @if(pokemonName.hasError('maxlength')) {
+                        <div class="invalid-feedback">
+                          Veuillez saisir un nom plus court.
+                          (Maximum: {{ pokemonName.getError("maxlength").requiredLength }} caractères)
+                        </div>
+                      }
+                      @if(pokemonName.hasError('pattern')) {
+                        <div class="invalid-feedback">
+                          Veuillez saisir uniquement des lettres.
+                        </div>
+                      }
                     </td>
                   </tr>
                   <tr>
                     <th scope="row">Points de vie</th>
                     <td>
                       <div class="input-group">
-                        <button type="button" class="btn btn-outline-secondary" disabled>
+                        <button type="button" class="btn btn-outline-secondary" [disabled]="pokemonLife.value <= POKEMON_RULES().MIN_LIFE" (click)="decrementLife()">
                           -
                         </button>
-                        <input type="number" class="form-control text-center" formControlName="life">
-                        <button type="button" class="btn btn-outline-secondary"  disabled>
+                        <input type="number" class="form-control text-center" formControlName="life" readonly>
+                        <button type="button" class="btn btn-outline-secondary"  [disabled]="pokemonLife.value >= POKEMON_RULES().MAX_LIFE" (click)="incrementLife()">
                           +
                         </button>
                       </div>
@@ -34,11 +56,11 @@
                     <th scope="row">Dégâts</th>
                     <td>
                       <div class="input-group">
-                        <button type="button" class="btn btn-outline-secondary" disabled>
+                        <button type="button" class="btn btn-outline-secondary" [disabled]="pokemonDamage.value <= POKEMON_RULES().MIN_DAMAGE" (click)="decrementDamage()">
                           -
                         </button>
-                        <input type="number" class="form-control text-center" formControlName="damage">
-                        <button type="button" class="btn btn-outline-secondary" disabled>
+                        <input type="number" class="form-control text-center" formControlName="damage" readonly>
+                        <button type="button" class="btn btn-outline-secondary"  [disabled]="pokemonDamage.value >= POKEMON_RULES().MAX_DAMAGE" (click)="incrementDamage()">
                           +
                         </button>
                       </div>
@@ -52,6 +74,16 @@
                           {{ type.value }} 
                           <span class="badge" [style.color]="type.value === 'Electrik' ? 'black' : 'white'">x</span>
                         </button>
+                      }
+                      @if (pokemonTypeList.hasError('required')) {
+                        <p class="text-danger">
+                          Veuillez sélectionner au moins un type pour un Pokémon.
+                        </p>
+                      }
+                      @if (pokemonTypeList.hasError('maxlength')){
+                        <p class="text-danger">
+                          Veuillez sélectionner au Maximum {{ pokemonTypeList.getError("maxlength").requiredLength }} types pour un Pokémon.
+                        </p>
                       }
                       <div class="row mt-3">
                         @for(type of pokemonService.getPokemonTypeList(); track type) {
@@ -73,7 +105,11 @@
                 <button class="btn btn-link text-decoration-none text-warning" [routerLink]="['/pokemons', pokemon().id]">
                   RETOUR
                 </button>
-                <button type="submit" class="btn btn-link text-decoration-none text-warning">
+                <button type="submit" class="btn btn-link text-decoration-none text-warning"
+                [class.text-warning]="form.valid"
+                [class.text-secondary]="form.invalid"
+                [disabled]="form.invalid"
+                >
                   SAUVEGARDER LES CHANGEMENTS
                 </button>
               </div>
@@ -83,7 +119,3 @@
       </div>
     </div>
   </div>
-
-  <pre>
-    {{ form.value | json }}
-  </pre>
