--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="row">
         @for (pokemon of pokemonListFiltered(); track pokemon.name){
-            <div class="col-md-4">
+            <div class="col-md-4 pokemon-card" [routerLink]="['/pokemons', pokemon.id]">
                 <div class="card mb-3" appPokemonColor [pokemonType]="pokemon.types[0]">
                     <div class="row g-0">
                         <div class="col-md-4 d-flex align-items-center justify-content-center bg-light">
@@ -34,11 +34,7 @@
                                 <h6 class="card-subtitle mb-2 text-body-secondary">Taille : {{ size(pokemon) }}</h6>
                                 <p class="card-text">{{ pokemon.created | date:'dd/MM/yyyy'}}</p>
                                 <p class="card-text">Points de vie : {{ pokemon.life }}</p>
-                                <div class="btn-group btn-group-sm" role="group">
-                                    <button (click)="decrementLife(pokemon)" [disabled]="pokemon.life <= 0">-</button>
-                                    <button (click)="incrementLife(pokemon)" [disabled]="pokemon.life >= 30">+</button>
-                                </div>
-                                <p class="card-text"><a [routerLink]="['/pokemons', pokemon.id]" class="text small text-muted">VOIR</a></p>
+                                <p class="card-text">Dégâts : {{ pokemon.damage }}</p>
                             </div>
                         </div>
                     </div>
