--- a/src/app/pokemon/pokemon-edit/pokemon-edit.component.html
+++ b/src/app/pokemon/pokemon-edit/pokemon-edit.component.html
@@ -1,13 +1,14 @@
-<div class="container mt-5">
+@if(pokemon(); as pokemon) {
+  <div class="container mt-5">
     <div class="card">
       <div class="row g-0">
         <div class="col-md-4 d-flex align-items-center justify-content-center bg-light">
-          <img [src]="pokemon().picture" class="img-fluid rounded-start" [alt]="pokemon().name"/>
+          <img [src]="pokemon.picture" class="img-fluid rounded-start" [alt]="pokemon.name"/>
         </div>
         <div class="col-md-8">
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="card-body">
-              <h2 class="card-title">{{ pokemon().name }}</h2>
+              <h2 class="card-title">{{ pokemon.name }}</h2>
               <table class="table">
                 <tbody>
                   <tr>
@@ -95,14 +96,14 @@
                             </label>
                           </div>
                         </div>
-                        }
+                      }
                       </div>
                     </td>
                   </tr>
                 </tbody>
               </table>
               <div class="d-flex justify-content-between mt-4">
-                <button class="btn btn-link text-decoration-none text-warning" [routerLink]="['/pokemons', pokemon().id]">
+                <button class="btn btn-link text-decoration-none text-warning" [routerLink]="['/pokemons', pokemon.id]">
                   RETOUR
                 </button>
                 <button type="submit" class="btn btn-link text-decoration-none text-warning"
@@ -110,12 +111,32 @@
                 [class.text-secondary]="form.invalid"
                 [disabled]="form.invalid"
                 >
-                  SAUVEGARDER LES CHANGEMENTS
-                </button>
-              </div>
+                SAUVEGARDER LES CHANGEMENTS
+              </button>
             </div>
-          </form>
-        </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
+  </div>
+}
+@if(loading()) {
+
+  <div class="d-flex justify-content-center">
+    <div class="spinner-border text-success" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+}
+@if(error()){
+  <div class="container text-center mt-5">
+      <div class="card">
+          <div class="card-body">
+              <img src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/035.png"class="img-fluid mx-auto d-block"alt="Rondoudou"/>
+              <h2 class="mt-4">Hey, ce Pokémon n'existe pas !</h2>
+              <a routerLink="/pokemons" class="btn btn-link mt-3 text-decoration-none">RETOURNER À L'ACCUEIL</a>
+          </div>
+      </div>
+  </div>
+}
