--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -21,6 +21,13 @@
 </div>
 <div class="container">
     <div class="row">
+        @if(loading()){
+            <div class="d-flex justify-content-center mb-5">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        }
         @for (pokemon of pokemonListFiltered(); track pokemon.name){
             <div class="col-md-4 pokemon-card" [routerLink]="['/pokemons', pokemon.id]">
                 <div class="card mb-3" appPokemonColor [pokemonType]="pokemon.types[0]">
