--- a/src/app/pokemon/pokemon-profile/pokemon-profile.component.html
+++ b/src/app/pokemon/pokemon-profile/pokemon-profile.component.html
@@ -1,35 +1,36 @@
+@if(pokemon(); as pokemon) {
 <div class="container mt-5">
-    <div class="card" appPokemonColor [pokemonType]="pokemon().types[0]">
+    <div class="card" appPokemonColor [pokemonType]="pokemon.types[0]">
         <div class="row g-0">
             <div class="col-md-4 d-flex align-items-center justify-content-center bg-light">
-                <img [src]="pokemon().picture" [alt]="pokemon().name" class="img-fluid rounded-start">
+                <img [src]="pokemon.picture" [alt]="pokemon.name" class="img-fluid rounded-start">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h2 class="card-title">
-                        {{ pokemon().name }}
+                        {{ pokemon.name }}
                     </h2>
                     <table class="table">
                         <tbody>
                             <tr>
                                 <th scope="row">Points de vie</th>
-                                <td> {{ pokemon().life }}</td>
+                                <td> {{ pokemon.life }}</td>
                             </tr>
                             <tr>
                                 <th scope="row">Dégâts</th>
-                                <td>{{ pokemon().damage }}</td>
+                                <td>{{ pokemon.damage }}</td>
                             </tr>
                             <tr>
                                 <th scope="row">Types</th>
                                 <td>
-                                    @for(type of pokemon().types; track type) {
+                                    @for(type of pokemon.types; track type) {
                                         <span class="badge rounded-pill bg-secondary me-1">{{ type }}</span>
                                     }
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">Date de création</th>
-                                <td>{{ pokemon().created | date : "dd/MM/yyyy"}}</td>
+                                <td>{{ pokemon.created | date : "dd/MM/yyyy"}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -37,10 +38,10 @@
                         <button class="btn btn-link text-decoration-none text-primary" routerLink="/pokemons">
                             RETOUR
                         </button>
-                        <button class="btn btn-link text-decoration-none text-info" [routerLink]="['/pokemon/edit', pokemon().id]">
+                        <button class="btn btn-link text-decoration-none text-info" [routerLink]="['/pokemon/edit', pokemon.id]">
                             EDITER
                         </button>
-                        <button class="btn btn-link text-decoration-none text-danger">
+                        <button class="btn btn-link text-decoration-none text-warning" (click)="deletePokemon(pokemon.id)">
                             SUPPRIMER
                         </button>
                     </div>
@@ -49,3 +50,23 @@
         </div>
     </div>
 </div>
+}  
+@if(loading()) {
+
+    <div class="d-flex justify-content-center">
+      <div class="spinner-border text-success" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+}
+@if(error()){
+    <div class="container text-center mt-5">
+        <div class="card">
+            <div class="card-body">
+                <img src="http://assets.pokemon.com/assets/cms2/img/pokedex/full/035.png"class="img-fluid mx-auto d-block"alt="Rondoudou"/>
+                <h2 class="mt-4">Hey, ce Pokémon n'existe pas !</h2>
+                <a routerLink="/pokemons" class="btn btn-link mt-3 text-decoration-none">RETOURNER À L'ACCUEIL</a>
+            </div>
+        </div>
+    </div>
+}
