formulaire de création de pokemon

--- a/src/app/pokemon/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.scss
@@ -5,3 +5,8 @@ div .col-md-4 .card{
 .pokemon-card {
     cursor: pointer;
 }
+
+.rounded-circle{
+    background-color: rgba(227, 53, 13, 1);
+    color: white;
+}
