--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -54,3 +54,8 @@
         }
     </div>
 </div>
+<div class="position-fixed bottom-0 end-0 m-3">
+    <button type="button" class="btn rounded-circle btn-lg" routerLink="/pokemons/add">
+      +
+    </button>
+</div>
